--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,6 +38,7 @@ a {
   color: var(--primary-color);
   transition: color 0.3s ease;
   font-family: 'Times New Roman', Times, serif;
+  cursor: pointer;
 }
 
 a:hover {
@@ -192,7 +193,6 @@ section {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -355,4 +355,15 @@ video::-webkit-media-controls {
   100% {
     transform: rotate(360deg);
   }
+}
+.insta-img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.insta-img:hover {
+  transform: scale(1.05);
 }
